# Hamilton

./: .env  .gitattributes  Dockerfile  Makefile  PROJECT_DOCS.md  PROJECT_STRUCTURE.md  README.md  TODO.md  _config.yaml  doc_generator.py  generate_docs.py  mlflow.db  one_off_script.py  project_directory_generator.py  pyproject.toml  requirements.txt  running.md  script (1).py  scripts.py  working_directory.md
.github/workflows/: deploy-backend.yml  veritly-ai-AutoDeployTrigger-5a9ce8d2-79f0-4839-8d25-a917a1ebba31.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/workers/: eval_runner.py  index_swapper.py  ingest_runner.py
auth/: auth_manager.py  auth_routes.py  cache_manager.py  models.py  rbac_dependencies.py  security_middleware.py  tier_config.py
configs/: datasources.yaml  eval.yaml  mlops.yaml  observability.yaml  prompts.yaml  security_policies.yaml
configs/pipelines/: default.yaml
data/statutes/: usc01.xml  usc03.xml  usc04.xml  usc05A.xml  usc09.xml  usc10.xml  usc11a.xml  usc13.xml  usc14.xml  usc17.xml  usc18a.xml  usc24.xml  usc26.xml  usc27.xml  usc32.xml  usc35.xml  (+9 more)
docs/: index.md
documents/: doc_routes.py
generation/: __init__.py
memory/: database.py  memory_routes.py  models.py  repository.py  schemas.py  service.py  utils.py
orchestrations/: adapters.md
orchestrator/: __init__.py  guards.py  interfaces.py  observability.py  pipeline.py  planner.py  rate_limiters.py  registry.py
retrieval/: __init__.py
scripts/: build_bm25.py
storage/: bm25_index.pkl  faiss_index.chunks.pkl  faiss_index.index  faiss_index.meta.pkl
(+90 files in other folders)
