[project]
name = "hamilton"
version = "0.1.0"
description = ""
authors = [
    {name = "pranay rishith",email = "52948338+pranayrishith16@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
